po: update po/fr_CA/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/install.po
+++ b/po/fr_CA/install.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-08 16:36+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-08-29 16:59+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -65,7 +65,7 @@ msgstr "Oups ! Version de Drupal incorrecte"
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "Cette version de CiviCRM peut seulement être utilisée avec Drupal 6.x ou 7.x. Veuillez vérifier que '%1' existe si vous utilisez Drupal 7.0 ou plus récent."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
@@ -155,7 +155,7 @@ msgstr "Est-il possible d'accéder/créer des tables InnoDB dans la base de donn
 msgid ""
 "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM"
 " but is either not available or not enabled in this MySQL database server."
-msgstr ""
+msgstr "Impossible de créer des tables InnoDB. Un support MySQL InnoDB est nécessaire pour CiviCRM, mais ce support n'est pas disponible ou n'est pas activé sur le serveur de cette base de données MySQL."
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
@@ -165,16 +165,16 @@ msgstr "Est-il possible de créer des tables temporaires dans la base de donnée
 msgid ""
 "Unable to create temporary tables. This MySQL user is missing the CREATE "
 "TEMPORARY TABLES privilege."
-msgstr ""
+msgstr "Impossible de créer des tableaux temporaires. Cet utilisateur MySQL n'a pas le privilège CRÉER DES TABLEAUX TEMPORAIRES."
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr ""
+msgstr "Est-ce que je peux créer des tableaux verrouillés dans la base de données ?"
 
 #: install/index.php
 msgid ""
 "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
-msgstr ""
+msgstr "Impossible de verrouiller les tableaux. Cet utilisateur MySQL n'a pas le privilège VERROUILLER TABLEAUX."
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
@@ -184,7 +184,7 @@ msgstr "Est-il possible de créer des déclencheurs (triggers) dans la base de d
 msgid ""
 "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  "
 "privilege."
-msgstr ""
+msgstr "Impossible de créer des déclencheurs. Cet utilisateur MySQL n'a pas le privilège CREER DES DELENCHEURS (CREATE TRIGGERS)."
 
 #: install/index.php
 msgid "PHP5 installed"
@@ -212,7 +212,7 @@ msgstr "Est-ce que le chemin CiviCRM contient PATH_SEPARATOR ?"
 
 #: install/index.php
 msgid "The path %1 contains PATH_SEPARATOR (the %2 character)."
-msgstr ""
+msgstr "Le chemin %1 contient PATH_SEPARATOR (le caractère %2)."
 
 #: install/index.php
 msgid "Folder '%1' exists?"
@@ -242,7 +242,7 @@ msgstr "Serveur Web reconnu"
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "Il semble que vous utilisiez un serveur web non pris en charge. Les variables du serveur SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME besoin d'être réglé.\\"
 
 #: install/index.php
 msgid "JSON support"
@@ -261,7 +261,7 @@ msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr ""
+msgstr "XCache is installed and there are known compatibility issues between XCache and CiviCRM. Consider using an alternative PHP caching mechanism or disable PHP caching altogether."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -290,13 +290,13 @@ msgstr "Les problèmes suivants m'empêchent d'installer CiviCRM :"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Vous avez besoin d'une version PHP %1 ou plus, seulement la %2 est installé. Merci de mettre à jour votre serveur, ou demandez à votre hébergeur de le faire."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "Version PHP %1 n'est pas supporté. Une version PHP antérieur à %2 est requis. Vous voudrez peut-être rétrograder votre serveur, ou demandez à votre hébergeur de le faire."
 
 #: install/index.php
 msgid "file '%1' not found"
@@ -310,17 +310,17 @@ msgstr "Le fichier « %1 » a été trouvé."
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr ""
+msgstr "Le compte utilisateur utilisé par votre serveur %1 a besoin d'avoir accordé l'accès écriture sur le répertoire suivant dans le but de configurer le fichier d'options CiviCRM :"
 
 #: install/index.php
 msgid ""
 "Cannot determine the version of MySQL installed. Please ensure at least "
 "version %1 is installed."
-msgstr ""
+msgstr "Impossible de déterminer la version installée de MySQL. Veuillez vérifier qu'au moins la version %1 est installée."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Impossible de déterminer si MySQL supporte InnoDB. On suppose que non."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
@@ -340,55 +340,55 @@ msgstr "Il n'a pas été possible de sélectionner la base de données."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Impossible de créer une table temporaire."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "N'a pas pu créer une table dans la base de données"
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "N'a pas pu créer un déclencheur de base de données (database trigger)."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "N'a pas pu se connecter au serveur de la base de données"
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Impossible de verrouiller la table en écriture."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Impossible d'ouvrir la table en écriture."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Impossible d'interroger les variables du serveur de base de données."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL serveur auto_increment_increment est 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Impossible d'obtenir des informations sur les procédures stockées de la base de données."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" est %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "La base de données '%1' n'existe pas."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Capable de créer une nouvelle base de donnée."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "L'utilisateur '%1' n'a pas l'autorisation CRÉER BASE DE DONNÉES."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
@@ -396,13 +396,13 @@ msgstr "les variables PHP suivantes sont manquantes: %1"
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "Oups ! Impossible de créer base de données %1"
 
 #: install/index.php
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "Nous avons rencontré une erreur lors de la tentative de créer la base de données. S'il vous plaît vérifier vos autorisations sur le serveur MySQL et le nom de la base de données et essayer à nouveau."
 
 #: install/index.php
 msgid ""
@@ -448,11 +448,11 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Les autorisations des utilisateurs de WordPress ont été automatiquement fixées - en donnant aux anonymes et aux abonnés l'accès aux formulaires et aux fonctions publiques de CiviCRM. Nous vous recommandons de <a %1> revoir ces autorisations </a> pour assurer qu'ils sont appropriés à vos besoins (<a %2> en savoir plus ... </a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
-msgstr ""
+msgstr "<a %1>Consultez la documentation en ligne pour plus d'informations</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
@@ -520,7 +520,7 @@ msgstr "Changer la langue"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Version de la base de données et paramètres de la connexion"
 
 #: install/template.html
 msgid ""
@@ -576,11 +576,11 @@ msgstr "Revérification des éléments prérequis."
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "Détails de la base de données CiviCRM"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Détails de la base de données Drupal"
 
 #: install/template.html
 msgid "Requirements"
