--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-07 13:47+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-08-29 16:59+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -234,7 +234,7 @@ msgstr "Montrer l'emplacement"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Identifiant de Role par défaut"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Title"
@@ -1502,13 +1502,13 @@ msgstr "Supprimer les participants et les événements modifiables"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "gestion des profils d'événements"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Autoriser les utilisateurs à créer, modifier et copier les formulaires de profils des événements utilisés pour l'enregistrement d'événements en ligne."
 
 #: CRM/Event/Info.php
 msgid "Your Event(s)"
@@ -2988,7 +2988,7 @@ msgstr "Date de l'évènement"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "NOTE : Les contacts sélectionnés dans les résultats de recherche ne sont pas pertinents ici; tous les contacts qui correspondent aux critère suivant seront intégrés dans le groupe."
 
 #: templates/CRM/Event/Form/Task.tpl
 msgid "Number of selected participants: %1"
@@ -3578,7 +3578,7 @@ msgstr "Votre inscription a été remplie par :"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Total des Participants"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
@@ -3649,7 +3649,7 @@ msgstr ""
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "Complet ?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
@@ -3657,11 +3657,11 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Rôle par défaut"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
-msgstr ""
+msgstr "Nombre maximum de participants en plus par régistration"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
@@ -3677,7 +3677,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Maximum additional participants"
-msgstr ""
+msgstr "Participants maximum en plus"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
@@ -3785,27 +3785,27 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Supprimer les participants de cet événement"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Exporter les participants"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Annuler l'inscription"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
-msgstr ""
+msgstr "Changer le statut des participants (et envoi de courriels)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Badges nominatifs - impression"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
-msgstr ""
+msgstr "Lettre PDF - Imprimer pour les participants"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
@@ -3859,7 +3859,7 @@ msgid ""
 " their registration OR transfer it to another participant. If this feature "
 "is enabled, event confirmation emails will include a link to a Cancel or "
 "Transfer form."
-msgstr ""
+msgstr "Selectionnez cette case si vous souhaitez de permettre aux participants enregistrés soit d'annuler leur enregistrement OU de transférer vers un autre participant. Si cette fonction est activée, les emails de confirmation seront inclus sous un lien de formulaire d'annulation ou de transfert. "
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
