--- a/po/fr_CA/pcp.po
+++ b/po/fr_CA/pcp.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"PO-Revision-Date: 2016-08-29 18:26+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -445,7 +445,7 @@ msgstr "Envoyer des courriels invitant vos amis à soutenir votre campagne !"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Copy this link to share directly with your network!"
-msgstr ""
+msgstr "Copiez ce lien pour partager directement avec votre réseau !"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
@@ -495,7 +495,7 @@ msgstr ""
 msgid ""
 "If this option is checked, you will receive an email notification when "
 "people contribute to your campaign."
-msgstr ""
+msgstr "Si cette option est activée, vous recevrez une notification par e-mail quand quelqu'un contribuera à votre campagne."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -743,12 +743,12 @@ msgstr "En relation avec la page de contribution"
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "You have received a donation at your personal page"
-msgstr ""
+msgstr "Vous avez reçu une donation sur votre page personnelle"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Your fundraising total has been updated."
-msgstr ""
+msgstr "Votre total a été mis à jour."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
