--- a/po/fr_CA/member.po
+++ b/po/fr_CA/member.po
@@ -11,14 +11,14 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2012
-# samuelsov <samuel@koumbit.org>, 2012
+# samuelsov <samuel@koumbit.org>, 2012,2015
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:20+0000\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -193,7 +193,7 @@ msgstr "Identifiant de membre leader"
 
 #: CRM/Member/DAO/Membership.php CRM/Member/DAO/MembershipLog.php
 msgid "Max Related"
-msgstr ""
+msgstr "Max de relations"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Memberhip Recurring Contribution"
@@ -303,7 +303,7 @@ msgstr "Réservé"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type ID"
-msgstr ""
+msgstr "Identifiant du type d'adhérent"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Domain"
@@ -327,7 +327,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Duration Unit"
-msgstr ""
+msgstr "Unité de durée pour le type d'adhésion"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Duration Interval"
@@ -964,15 +964,15 @@ msgstr ""
 
 #: CRM/Member/Info.php
 msgid "View memberships"
-msgstr ""
+msgstr "Voir les adhésions"
 
 #: CRM/Member/Info.php
 msgid "edit memberships"
-msgstr ""
+msgstr "éditer les adhésions"
 
 #: CRM/Member/Info.php
 msgid "Create and update memberships"
-msgstr ""
+msgstr "Créer et modifier les adhésions"
 
 #: CRM/Member/Info.php
 msgid "delete in CiviMember"
@@ -1233,13 +1233,13 @@ msgstr "Montant du paiement de l'adhèsion. Un enregistrement de contribution se
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Envoyer automatiquement une confirmation d'adhésion et un reçu par courriel à %1 ?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "SI le paiement vient d'un autre contact, le courriel ne sera envoyé qu'à celui-ci."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to "
@@ -1791,7 +1791,7 @@ msgstr "Lettres d'adhésion (PDF)"
 
 #: templates/CRM/Member/Form/Task.tpl
 msgid "Number of selected memberships: %1"
-msgstr ""
+msgstr "Nombre d'adhésions sélectionnées : %1"
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid "Contact Records for Members"
@@ -2290,7 +2290,7 @@ msgstr "Adhésion de %1"
 
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "NO"
-msgstr ""
+msgstr "NON"
 
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid ""
