po: update po/pl_PL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/mailing.po
+++ b/po/pl_PL/mailing.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Radek <d.exax@hotmail.com>, 2012
-# Karolina Pomarańska <karolina@caltha.pl>, 2015
+# Karolina Pomarańska <karolina@caltha.pl>, 2015-2016
 # kalor <karol.krzyczkowski@gmail.com>, 2015
 # Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2013-2015
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-16 21:51+0000\n"
-"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
+"PO-Revision-Date: 2016-08-29 14:46+0000\n"
+"Last-Translator: Karolina Pomarańska <karolina@caltha.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -331,19 +331,19 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "MailingAB ID"
-msgstr ""
+msgstr "ID wysyłkiAB"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (A)"
-msgstr ""
+msgstr "ID wysyłki (A)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (B)"
-msgstr ""
+msgstr "ID wysyłki (B)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (C)"
-msgstr ""
+msgstr "ID wysyłki (C)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Testing Criteria"
@@ -637,11 +637,11 @@ msgstr "Anulowana subskrypcja grupy"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "DOŁĄCZ odbiorców wysyłki/wysyłek"
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "WYKLUCZ odbiorców wysyłki/wysyłek"
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
@@ -1184,7 +1184,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Podgląd HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
@@ -1192,7 +1192,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Wyślij email testowy do:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
@@ -1208,7 +1208,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Wyślij email testowy do grupy:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
@@ -1253,11 +1253,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Dołącz:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Wyklucz:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1302,7 +1302,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Wyślij natychmiast"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
@@ -1310,7 +1310,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Wybierz Kampanię"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1506,11 +1506,11 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
-msgstr ""
+msgstr "Dołącz grupę"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Group"
-msgstr ""
+msgstr "Wyklucz grupę"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
@@ -1758,19 +1758,19 @@ msgstr ""
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr ""
+msgstr "Wysyłka A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr ""
+msgstr "Wysyłka B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr ""
+msgstr "Testowa wysyłka A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr ""
+msgstr "Testowa wysyłka B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
@@ -1976,7 +1976,7 @@ msgid ""
 "included groups by selecting one or more <strong>Excluded Groups</strong>. "
 "Contacts who are in both groups will NOT receive the mailing (they are "
 "'excluded')."
-msgstr ""
+msgstr "Masz również możliwość <strong>Wykluczyć<strong> niektóre kontakty z odbiorców wysyłki wybierając jedną lub więcej grupę w polu <strong>Wykluczone Grupy</strong>. Kontakty, które występują jednocześnie w dołączonej i wykluczonej grupie NIE otrzymają wysyłki (zostaną wykluczone)."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Include Mailings"
