po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 15:37+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-30 12:58+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3791,7 +3791,7 @@ msgstr "El número de días antes de un vínculo personalizado (hashed) está a 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "If enabled, all actions will be logged with a complete record of changes."
-msgstr "De ser activdad, todas lad acciones realizadas serán almacenas con sus cambios."
+msgstr "Si está disponible, todas las acciones realizadas serán almacenas con sus cambios."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid "This functionality cannot be enabled on multilingual installations."
@@ -3840,7 +3840,7 @@ msgstr "Alerte a los administradores del sitio sobre los avisos de seguridad.  <
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid "Alert site admins about all new CiviCRM releases."
-msgstr "Alerte a los administradores de la página de todas las descargas nuevas de CiviCRM."
+msgstr "Alerte a los administradores de la página de todas las versiones nuevas de CiviCRM."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -3877,19 +3877,19 @@ msgstr "reCAPTCHA es un servicio gratis que ayuda a prevenir el abuso automátic
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr "Puede especificar las opciones de reCAPTCHA en función del tema  usando datos separados por comas (v.g.: tema:'blackglass',lang:'es'). "
+msgstr "Puede especificar las opciones de reCAPTCHA en función del tema  usando datos separados por comas (Ej: tema:'blackglass',lang:'es'). "
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "Check the available options at <a %1>Customizing the Look and Feel of "
 "reCAPTCHA</a>."
-msgstr "Visualice las opciones disponibles en <a %1>Personalizando la Vista y el Sentir de reCAPTCHA</a>."
+msgstr "Visualice las opciones disponibles <a %1>personalizando la vista y el sentido de reCAPTCHA</a>."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "Disabling this option will prevent CiviCRM from checking for important "
 "security updates. Are you sure?"
-msgstr "Al deshabilitar esta opción prevendrá a CiviCRM verificar si existen actualizaciones de seguridad importantes. ¿Está seguro?"
+msgstr "Al deshabilitar esta opción evitará que CiviCRM verifique si existen actualizaciones de seguridad importantes. ¿Está seguro?"
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
@@ -4368,7 +4368,7 @@ msgstr "Nombre del Parámetro"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Choose a parameter from the list, or select \"other\" for manual entry."
-msgstr "Escoja un parámetro de la lista o seleccione \"Otro\" para ingresar manualmente."
+msgstr "Escoja un parámetro de la lista o seleccione \"otro\" para agregarlo manualmente."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
@@ -4399,17 +4399,17 @@ msgstr "Valores simples tales como números, verdadero, falso y nulo."
 msgid ""
 "Strings. You may include quotes around the string to ensure it's not "
 "interpreted otherwise, e.g. \"false\"."
-msgstr "Strings. Puedes incluir comillas alrededor del string para asegurarte de que no sea interpretado de otra manera, e.g. \"false\""
+msgstr "Cadenas de texto. Puedes incluir comillas alrededor de la cadena para asegurarte de que no sea interpretado de otra manera, Ej. \"false\""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Arrays in js format, e.g. [1, 2, 3, 'foo', 'bar', 'baz']."
-msgstr "Gama en formato js, por ejemplo [1, 2, 3, 'foo', 'bar', 'baz']."
+msgstr "Arrays en formato js, por ejemplo [1, 2, 3, 'foo', 'bar', 'baz']."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "A comma-separated list will automatically be turned into an array for "
 "multivalue operations, or you can explicitly use the js array format above."
-msgstr "Una lista separada por coma será convertida automáticamente en una matriz para operaciones de múltiples valores, o puede utilizar específicamente el formato js de matriz anterior."
+msgstr "Una lista separada por coma será convertida automáticamente en un array para operaciones de múltiples valores, o puede utilizar específicamente el formato js de array anterior."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Choose a field not in this list"
@@ -4417,11 +4417,11 @@ msgstr "Escoja un campo que no se encuentra en esta lista."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Fields to return"
-msgstr "Campos a retornar"
+msgstr "Campos a devolver"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Leave blank for default"
-msgstr "Dejar en blanco para usar el por defecto."
+msgstr "Dejar en blanco para usar el valor por defecto."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Group by"
@@ -4429,7 +4429,7 @@ msgstr "Agrupar por"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Return Value"
-msgstr "Devuelve valor"
+msgstr "Devolver valor"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Select field"
@@ -4441,7 +4441,7 @@ msgstr "Selección automática del usuario actual"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Syntax error: input should be valid JSON or a quoted string."
-msgstr "Error de sintaxis: la entrada debe ser JSON válida o una cadena citada."
+msgstr "Error de sintaxis: la entrada debe ser JSON válido o una cadena con comillas."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Select an entity."
@@ -4501,11 +4501,11 @@ msgstr "Ejecutar"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Execute API call and display results"
-msgstr "Ejecuta llamada API y muestra resultados"
+msgstr "Ejecuta llamada API y mostrar resultados"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Results are displayed here."
-msgstr "Los resultados se muestran acá."
+msgstr "Los resultados se muestran aquí."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Parameter"
@@ -5129,7 +5129,7 @@ msgstr "(Parametros de las tareas y documentación de la sintaxis de línea de c
 msgid ""
 "This screen presents the list of most recent 1,000 scheduled jobs log "
 "entries."
-msgstr "Esta pantalla muestra una lista con las 1,000 más recientes entradas de trabajos programados"
+msgstr "Esta pantalla muestra una lista con las 1,000 tareas programadas más recientes."
 
 #: templates/CRM/Admin/Page/JobLog.tpl
 msgid "List of log entries for:"
@@ -6431,7 +6431,7 @@ msgstr "No hay etiquetas actualmente. Usted puede <a href='%1'>añadir una</a>."
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Merge tag %1 into:"
-msgstr "Combinar etiqueta en :"
+msgstr "Combinar etiqueta %1 en:"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "- select tag -"
@@ -6519,7 +6519,7 @@ msgstr "Idioma por defecto para usuarios"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use default site language"
-msgstr "Usar lenguaje por defecto"
+msgstr "Usar lenguaje por defecto del sitio"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Leave undefined"
