--- a/po/ca_ES/financial.po
+++ b/po/ca_ES/financial.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:20+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-30 17:15+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -758,7 +758,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Are you sure you want to delete:"
-msgstr ""
+msgstr "Esteu segur que voleu eliminar:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Are you sure you want to close:"
