--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 12:04+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-30 17:26+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1987,7 +1987,7 @@ msgstr "Destinataris addicionals del mailing"
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
 "You are requesting to opt out this email address from all mailing lists:"
-msgstr ""
+msgstr "Esteu sol·licitant donar de baixa aquesta adreça de correu electrònic de totes les llistes de mailing:"
 
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
@@ -2370,7 +2370,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Page/Browse.hlp
 msgid "This field is disabled when searching for Draft/Unscheduled mailings."
-msgstr ""
+msgstr "Aquest camp està desactivat quan es cerquen enviaments esborranys i no programats. "
 
 #: templates/CRM/Mailing/Page/Browse.tpl
 msgid "No %1 match your search criteria. Suggestions:"
