--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-30 12:58+0000\n"
+"PO-Revision-Date: 2016-08-31 08:39+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -3415,7 +3415,7 @@ msgid ""
 " override this default setting and define the range of allowed dates for "
 "specific field types at <a href=\"%1\">Administer > Customize Data and "
 "Screens > Date Preferences</a>"
-msgstr "Utilice esta pantalla para configurar el formato predeterminado y la fecha en toda la página. Utilice las opciones estándar de POSIX. Nuevas instalaciones están preconfiguradas con el formato estándar de Estados Unidos. Puede anular el formato predeterminado y definir el rango permitido para las fechas por tipos en <a href=\"%1\">Administrador > Personaliza Información y Pantallas > Preferencias en Fechas</a>"
+msgstr "Utilice esta pantalla para configurar el formato predeterminado y la fecha en todo su sitio. Utilice las opciones estándar de POSIX. Nuevas instalaciones están preconfiguradas con el formato estándar de Estados Unidos. Puede anular el formato predeterminado y definir el rango permitido para las fechas por tipos en <a href=\"%1\">Administrar > Pantallas y datos personalizados > Ajustes de Fecha</a>"
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Date Display"
@@ -3536,7 +3536,7 @@ msgid ""
 "<strong>This feature should NOT be enabled for production sites.</strong><br"
 " />Set this value to <strong>Yes</strong> if you want to display a backtrace"
 " listing when a fatal error is encountered."
-msgstr "<strong> Esta opción NO debe está habilitada para páginas de producción. </strong><br />Establezca este valor en <strong> Sí </ strong>, si desea ver la lista cuando ocurra un error."
+msgstr "<strong> Esta opción NO debe está habilitada para páginas de producción. </strong><br />Establezca este valor en <strong> Sí </ strong>, si desea ver la lista de trazas cuando ocurra un error fatal."
 
 #: templates/CRM/Admin/Form/Setting/Debugging.tpl
 msgid ""
@@ -4051,7 +4051,7 @@ msgid ""
 "Enter the SMTP server (machine) name, such as \"smtp.example.com\".  If the "
 "server uses SSL, add \"ssl://\" to the beginning of the server name, such as"
 " \"ssl://smtp.example.com\"."
-msgstr "Ingrese el nombre del servidor SMTP (equipo), como por ejemplo \"smtp.ejemplo.com\". Si el servidor utiliza SSL, agregue \"ssl://\" al inicio del nombre del servidor, de forma que quede \"ssl://smtp.ejemplo.com\"."
+msgstr "Introduzca el nombre del servidor SMTP (equipo), como por ejemplo \"smtp.ejemplo.com\". Si el servidor utiliza SSL, agregue \"ssl://\" al inicio del nombre del servidor, de forma que quede \"ssl://smtp.ejemplo.com\"."
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid ""
@@ -4256,7 +4256,7 @@ msgid ""
 "For small to medium sized modifications, use your css file to override some "
 "of the styles in civicrm.css. Or if you need to make drastic changes, you "
 "can choose to disable civicrm.css completely."
-msgstr "Usted puede cambiar el formato de CiviCRM añadiendo su propio  modelo. Para pequeñas a medinas modificaciones, use su formato CSS para anular los estilos prederterminados en civicrm.css. O si desea hace varios cambios, puede anular civicrm.css completamente."
+msgstr "Usted puede cambiar la apariencia de CiviCRM añadiendo su propia hoja de estilo. Para pequeñas y medianas modificaciones, use su formato CSS para anular los estilos prederterminados en civicrm.css. O si desea hacer cambios drásticos, puede anular civicrm.css completamente."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
@@ -4381,7 +4381,7 @@ msgid ""
 "Some apis support a special syntax to allow other operators for \"get\" type"
 " actions. Choosing a different operator will automatically use this syntax, "
 "although it may not work with every api."
-msgstr "Algunos apis soportan una sintaxis especial para permitir otros operadores para las acciones tipo \"obtener\". Al escoger un operador diferente utilizará automáticamente este tipo de sintaxis, aunque puede que no funcione bien con cada api."
+msgstr "Algunas APIs soportan una sintaxis especial para permitir otros operadores para las acciones tipo \"get\". Al escoger un operador diferente utilizará automáticamente este tipo de sintaxis, aunque puede que no funcione bien con cada API."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Parameter Value"
@@ -5263,7 +5263,7 @@ msgid ""
 "If your organization has modified the default versions of System Workflow "
 "message templates, then the changes and bug fixes included in an upgrade "
 "will need to be merged with your modified versions."
-msgstr "Si su organización ha modificado las versiones predeterminadas del formato del mensaje de System Workflorw, entonces los cambios y correcciones que se incluyeron requerirán una actualización para que se unan las versiones modificadas."
+msgstr "Si su organización ha modificado las versiones predeterminadas del formato del mensaje del flujo de trabajo del sistema, entonces los cambios y correcciones que se incluyeron requerirán una actualización para que se unan las versiones modificadas."
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid ""
@@ -5460,7 +5460,7 @@ msgstr "Documentación de la API"
 msgid ""
 "CiviCRM is pre-configured with standard options for individual gender (Male,"
 " Female, Transgender). Modify these options as needed for your installation."
-msgstr "CiviCRM está predeterminado con las opciones estándares de género (Masculino, Femenino y Transgénero). Modifique estas opciones dependiendo de sus necesidades."
+msgstr "CiviCRM está pre-configurado con las opciones estándares de género (Masculino, Femenino y Transgénero). Modifique estas opciones dependiendo de sus necesidades."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
@@ -5490,7 +5490,7 @@ msgid ""
 "CiviCRM is pre-configured with standard options for individual contact name "
 "suffixes (Jr., Sr., II etc.). Customize these options and add new ones as "
 "needed for your installation."
-msgstr "CiviCRM está pre-configurado con opciones estándar para los sufijos (por ejemplo, Ms., Mr., Dr., etc.). Puede usar esta página para añadir los que necesite."
+msgstr "CiviCRM está pre-configurado con opciones estándar para los sufijos (por ejemplo, Jr., SR., II., etc.). Puede usar esta página para añadir los que necesite."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
@@ -5514,7 +5514,7 @@ msgid ""
 "The following credit card options will be offered to contributors using "
 "Online Contribution pages. You will need to verify which cards are accepted "
 "by your chosen Payment Processor and update these entries accordingly."
-msgstr "Se ofrecerán las siguientes opciones de tarjeta de crédito a los contribuidores usando sus Página de Contribución En Línea. Puede necesitar verificar tarjetas cuales tarjetas son aceptadas por su Procesador de Pago y actualizar estas entradas de acuerdo a esta información."
+msgstr "Se ofrecerán las siguientes opciones de tarjeta de crédito a los contribuidores usando sus páginas de contribución en línea. Puede que necesite verificar que tarjetas son aceptadas por su procesador de pago y actualizar estas entradas de acuerdo a esta información."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
@@ -6028,7 +6028,7 @@ msgid ""
 "have been given a MAC key please fill in the Mac Key field, and use "
 "https://sec.paymentexpress.com/pxpay/pxpay.aspx for the Site URL. Otherwise "
 "use https://sec.paymentexpress.com/pxpay/pxaccess.aspx for the Site URL."
-msgstr "Este es el URL para acceder al Sitio de pagos DPS/ Pago Expreso.  Si una clave MAC ha sido proveida por favor llenar el campo de Clave MAC y usar https://sec.paymentexpress.com/pxpay/pxpay.aspx para el URL de sitio. De otra forma entonces usar https://sec.paymentexpress.com/pxpay/pxaccess.aspx para URL."
+msgstr "Este es la URL para acceder al Sitio de pagos DPS/ Pago Expreso.  Si dispone de una clave MAC por favor llenene el campo de Clave MAC y use  https://sec.paymentexpress.com/pxpay/pxpay.aspx para la URL de sitio. De otra forma use https://sec.paymentexpress.com/pxpay/pxaccess.aspx para la URL del sitio."
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Payment Express UserID (LIVE account):"
@@ -6181,7 +6181,7 @@ msgid ""
 "fields types. Setting the default date format for the entire site is a "
 "Localisation setting. See <a href=\"%1\">Administer > Localization > Date "
 "Formats</a>"
-msgstr "Cambiar los parámetros acá afecta la entrada y visualización de los tipos de campos específicos. Ajustando el formato de fecha predefinida para todo el sitio es una configuración de Localización. Ver <a href=\"%1\">Administar > Localización > Formatos de fecha</a>"
+msgstr "Cambiar los parámetros aquí afecta la entrada y visualización de los tipos de campos específicos. Ajustando el formato de fecha predefinida para todo el sitio es una configuración de Localización. Ver <a href=\"%1\">Administar > Localización > Formatos de fecha</a>"
 
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "Date Class"
@@ -6265,7 +6265,7 @@ msgid ""
 "criteria selected above AND who ALSO match this criteria. If you select "
 "'Choose Recipients' - only the chosen contacts will receive the reminder "
 "(AND only if they ALSO match the criteria above)."
-msgstr "Seleccione \"Límite\" si solo quiere mandar notificaciones a los contactos con el criterio señalado arriba Y quienes TAMBIEN coinciden con el criterio. Si usted selecciona \"Escoger Destinatarios\" - sólo los contactos seleccionados recibirán la notificación (Y sólo si TAMBIEN coiciden con la selección de arriba)."
+msgstr "Seleccione \"Límitar\" si solo quiere mandar notificaciones a los contactos con el criterio señalado arriba Y quienes TAMBIÉN coinciden con el criterio. Si usted selecciona \"Escoger Destinatarios\" - sólo los contactos seleccionados recibirán la notificación (Y sólo si TAMBIÉN coinciden con la selección de arriba)."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
@@ -6273,7 +6273,7 @@ msgid ""
 "match this criteria. If you select 'Choose Recipients' - the chosen contacts"
 " will also receive the reminder (in ADDITION TO the contacts who match the "
 "criteria above)."
-msgstr "Seleccione \"También incluir\" si quiere de igual forma enviar recordatorios a contactos que cumplan con este criterio. Si selecciona \"Escoger destinatarios\" - los contactos seleccionados también recibirán el recordatorio (en ADICIONAR A los contactos que cumplen con el criterio anterior)."
+msgstr "Seleccione \"También incluir\" si quiere de igual forma enviar recordatorios a contactos que cumplan con este criterio. Si selecciona \"Escoger destinatarios\" - los contactos seleccionados también recibirán el recordatorio (en AGREGAR A los contactos que cumplen con el criterio anterior)."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
@@ -6282,7 +6282,7 @@ msgid ""
 "whom the activity is with (Activity Targets). Alternatively you can direct "
 "the reminder to specific contacts (Choose Recipients), or to a group of "
 "contacts."
-msgstr "Para Actividades, los contactos que quedan puede ser Asignados a la actividad, contactos quienes crearon la actividad (Fuente de la Actividad), O contactos de la actividad (Receptores objeto de la Actividad). Alternativamente, puede direccionar el recordatorio a contactos específicos (Seleccionar Receptores), o a grupo de contactos."
+msgstr "Para Actividades, los destinatarios de recordatorio puede ser Asignados a la actividad, contactos quienes crearon la actividad (Fuente de la Actividad), O contactos de la actividad (destinatarios de la Actividad). Alternativamente, puede dirigir el recordatorio a contactos específicos (Seleccionar Receptores), o a grupo de contactos."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
@@ -6307,7 +6307,7 @@ msgid ""
 "fields. If you leave these fields blank, the default FROM name and email "
 "address for your site will be used (Administer > Communications > FROM Email"
 " Addresses)."
-msgstr "Se puede configurar desde el nombre y correo electrónico para este recordatorio en estos campos. Si deja estos campos en blanco , se utilizará el valor predeterminado en Nombre y dirección de correo electrónico para su sitio ( Administrar > Comunicaciones >  direcciones de correo electrónico ) ."
+msgstr "Se puede configurar el nombre de REMITENTE y correo electrónico para este recordatorio en estos campos. Si deja estos campos en blanco , se utilizará el valor predeterminado en REMITENTE y dirección de correo electrónico para su sitio ( Administrar > Comunicaciones >  Direcciones de correo electrónico ) ."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid ""
@@ -6650,7 +6650,7 @@ msgstr "cantidad monetaria, formateada acorde con la moneda local seleccionada"
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
 "For a full list of options see the php <a %1>money_format documentation</a>."
-msgstr "Para una lista completa de opciones ve el php <a %1>money_format documentation</a>."
+msgstr "Para una lista completa de opciones revise el php <a %1>money_format documentation</a>."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary amounts with currency symbol."
