--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -3,7 +3,8 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
+# Antoinette Brinkmann <AC.BRINKMANN@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2015-2016
 # ixiam <info@ixiam.com>, 2013,2016
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 09:31+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-08-31 18:30+0000\n"
+"Last-Translator: Antoinette Brinkmann <AC.BRINKMANN@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -89,7 +90,7 @@ msgid ""
 "You can not delete this case type -- it is assigned to %1 existing case "
 "record(s). If you do not want this case type to be used going forward, "
 "consider disabling it instead."
-msgstr "No puede eliminar este tipo de caso -- está asignado a %1 caso(s) existente. Si no quiere usar este tipo de caso en adelante, considere la opción de deshabilitarlo."
+msgstr "No puede eliminar este tipo de caso -- está asignado a los 1% de casos existentes. Si no quiere usar este tipo de caso en adelante, considere la opción de deshabilitarlo."
 
 #: CRM/Case/BAO/Query.php
 msgid "Case %1 My Cases"
