--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # ixiam <info@ixiam.com>, 2011
 # Carlos Capote <carloscapote@masticable.org>, 2014
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:54+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-31 12:52+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5074,7 +5074,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Other Backgroun Colour"
-msgstr ""
+msgstr "Otro color de fondo"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "About Link Colour"
