po: update po/es_ES/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/install.po
+++ b/po/es_ES/install.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # Ares <duelista16@gmail.com>, 2015
 # francescbassas <francesc@babu.cat>, 2015
 # ixiam <info@ixiam.com>, 2014,2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 11:41+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-31 12:41+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +32,7 @@ msgstr "¡Oops! Por favor corrija la ubicación de la instalación."
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr "Porfavor descomprima su copia descargada de CiviCRM en el <strong>%1</strong> directorio debajo de tu directorio principal de Drupal."
+msgstr "Porfavor descomprima su copia descargada de CiviCRM en el directorio <strong>%1</strong> debajo de tu directorio principal de Drupal."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
@@ -39,7 +40,7 @@ msgstr "¡Oops! CiviCRM ya se encuentra instalado"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr "[Tu directorio Drupal]"
+msgstr "[Tu directorio raíz de Drupal]"
 
 #: install/index.php
 msgid "Installation Guide"
@@ -52,11 +53,11 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr "Se ha instalado CiviCRM. <ul><li><strong>Para empezar</strong>, debe eliminar o cambiar el nombre del archivo de configuración existente de CiviCRM  - <strong>civicrm.settings.php</strong> - desde el <strong>%1</strong>.</li><li><strong>Para actualizar una instalación existente<strong>, <a href='%2'>consulte la documentación en línea</a>.</li></ul>"
+msgstr "Se ha instalado CiviCRM. <ul><li><strong>Para empezar</strong>, debe eliminar o cambiar el nombre del archivo de configuración existente de CiviCRM  - <strong>civicrm.settings.php</strong> - desde <strong>%1</strong>.</li><li><strong>Para actualizar una instalación existente<strong>, <a href='%2'>consulte la documentación en línea</a>.</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr "Oops! Versión incorrecta de CiviCRM"
+msgstr "¡Oops! Versión incorrecta de CiviCRM"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
@@ -64,13 +65,13 @@ msgstr "Este instalador sólo se puede utilizar para la versión de Drupal CiviC
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr "Oops! Versión incorrecta de Drupal"
+msgstr "¡Oops! Versión incorrecta de Drupal"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr "Esta versión de CiviCRM solo puede ser usada con Drupal 6.x o 7.x. Por favor, asegúrese de que '%1' exista. Si esta ejecutando Drupal 7.0 o mas"
+msgstr "Esta versión de CiviCRM solo puede ser usada con Drupal 6.x o 7.x. Por favor, asegúrese de que '%1' exista. Si esta ejecutando Drupal 7.0 o más."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
@@ -98,7 +99,7 @@ msgstr "¿Existe el servidor?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr "No se puede encontrar el servidor de MySQL server en '%1'."
+msgstr "No se puede encontrar el servidor de MySQL servidor en '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -142,7 +143,7 @@ msgstr "El nombre de la base de datos no es válido. Utiliza sólo 0-9, a-z, A-Z
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
-msgstr "¿Tiene el thread_stack de MySQL como mínimo un (%1k)? "
+msgstr "¿Tiene el thread_stack de MySQL como mínimo a (%1k)? "
 
 #: install/index.php
 msgid "Can I access/create the database?"
@@ -154,7 +155,7 @@ msgstr "No puedo crear nuevas bases de datos y la base de datos '%1' no existe."
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr "Puedo acceder/crear InnoDB tablas en la base de datos?"
+msgstr "¿Puedo acceder/crear InnoDB tablas en la base de datos?"
 
 #: install/index.php
 msgid ""
@@ -164,7 +165,7 @@ msgstr "No se pueden crear tablas InnoDB. Se requiere el soporte de MySQL InnoDB
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
-msgstr "Puedo yo crear tablas temporales en la base de datos?"
+msgstr "¿Puedo yo crear tablas temporales en la base de datos?"
 
 #: install/index.php
 msgid ""
@@ -174,7 +175,7 @@ msgstr "No se pueden crear tablas temporales. Este usuario de MySQL no dispone d
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr "¿Puedo crear tablas de bloqueo en la base de datos?"
+msgstr "¿Puedo crear tablas bloqueadas en la base de datos?"
 
 #: install/index.php
 msgid ""
@@ -183,7 +184,7 @@ msgstr "No se pueden bloquear las tablas. Este usuario de MySQL no tiene privile
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr "Puedo crear triggers en la Base de Datos?"
+msgstr "¿Puedo crear disparadores en la Base de Datos?"
 
 #: install/index.php
 msgid ""
@@ -247,7 +248,7 @@ msgstr "Reconocido servidor web"
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr "Parece estar utilizando un servidor web compatible. Es necesario establecer las variables de servidor SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME."
+msgstr "Parece estar utilizando un servidor web no compatible. Es necesario establecer las variables de servidor SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME."
 
 #: install/index.php
 msgid "JSON support"
@@ -301,7 +302,7 @@ msgstr "Usted necesita la versión de PHP %1 o posterior, sólo está  instalada
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr "No se admite la version PHP %1. Se requieren versiones más recientes que de PHP %2. Es possible que desee rebajarlo, o preguntar a su proveedor de hosting. "
+msgstr "No se admite la versión PHP %1. Se requieren versiones más recientes que de PHP %2. Es posible que desee bajarla, o preguntar a su proveedor de hosting. "
 
 #: install/index.php
 msgid "file '%1' not found"
@@ -341,7 +342,7 @@ msgstr "No pude acceder a la base de datos."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr "No pude seleccionar la base de datos. "
+msgstr "No se pudo seleccionar la base de datos. "
 
 #: install/index.php
 msgid "Could not create a temp table."
@@ -401,7 +402,7 @@ msgstr "Faltan las siguientes variables PHP : %1 "
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr "Oops! No pude crear la base de datos %1"
+msgstr "¡Oops! No se pudo crear la base de datos %1"
 
 #: install/index.php
 msgid ""
@@ -525,7 +526,7 @@ msgstr "Cambiar idioma"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr "Base de datos Configuración de Versión y Conexión"
+msgstr "Configuración de base de datos, versión y conexión"
 
 #: install/template.html
 msgid ""
@@ -577,7 +578,7 @@ msgstr "Otros Ajustes"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr "Requerimientos de re-verificación"
+msgstr "Volver a comprobar los requisitos."
 
 #: install/template.html
 msgid "CiviCRM Database Details"
@@ -589,4 +590,4 @@ msgstr "Detalles de la Base de Datos Drupal "
 
 #: install/template.html
 msgid "Requirements"
-msgstr "Requerimientos"
+msgstr "Requisitos"
