po: update po/es_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 11:56+0000\n"
+"PO-Revision-Date: 2016-08-31 08:51+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -515,7 +515,7 @@ msgstr "Preferencias de Búsqueda"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Preferences"
-msgstr "Preferencias de Fechas"
+msgstr "Preferencias de Fecha"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1216,7 +1216,7 @@ msgstr "Volver a Suscribirse"
 
 msgctxt "menu"
 msgid "Opt-out"
-msgstr "Excluirse"
+msgstr "Excluir"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1495,12 +1495,12 @@ msgstr "Buscar SMS masivo"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New A/B Test"
-msgstr "Nuevo test A/B"
+msgstr "Nueva prueba A/B"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage A/B Tests"
-msgstr "Gestionar tests A/B"
+msgstr "Gestionar pruebas A/B"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1700,7 +1700,7 @@ msgstr "CiviGrant"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Grant Status"
-msgstr "Estado de la Subvención"
+msgstr "Estado de la Donación"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1750,7 +1750,7 @@ msgstr "Registrar tu sitio"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr "Unirte a CiviCRM"
+msgstr "Unirse a CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1760,7 +1760,7 @@ msgstr "Desarrollador"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "API Explorer"
-msgstr "Explorador API"
+msgstr "Explorador de API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
