--- a/po/es_ES/provinces.po
+++ b/po/es_ES/provinces.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2013
 # ixiam <info@ixiam.com>, 2013,2016
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 11:37+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-31 09:11+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
