--- a/po/es_ES/grant.po
+++ b/po/es_ES/grant.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2013
 # francescbassas <francesc@babu.cat>, 2015
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 11:42+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-31 12:29+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,11 +98,11 @@ msgstr "Cantidad subvencionada"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr "Moneda de la subvención"
+msgstr "Moneda de la donación"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
-msgstr "Motivo de la Subvención"
+msgstr "Motivo de la donación"
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
@@ -126,8 +127,8 @@ msgstr "Eliminar subvenciones"
 #: CRM/Grant/Form/Task/Delete.php
 msgid "%count grant deleted."
 msgid_plural "%count grants deleted."
-msgstr[0] "% de becas eliminadas."
-msgstr[1] "% de becas eliminadas."
+msgstr[0] "% de donación eliminada."
+msgstr[1] "% de donaciones eliminadas."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -139,7 +140,7 @@ msgstr "Actualizar subvenciones"
 
 #: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Subvenciones actualizadas: %1 (Total seleccionadas: %2)"
+msgstr "Donaciones actualizadas: %1 (Total seleccionadas: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
@@ -147,15 +148,15 @@ msgstr "acceder a CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr "Ver todas las subvenciones"
+msgstr "Ver todas las donaciones"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr "Editar subvención"
+msgstr "Editar donación"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr "Crear y actualizar subvenciones "
+msgstr "Crear y actualizar donaciones "
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
@@ -163,7 +164,7 @@ msgstr "eliminar en CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr "Eliminar subvenciones"
+msgstr "Eliminar donaciones"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
@@ -187,7 +188,7 @@ msgstr "Solicitado"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr "Subvencionado"
+msgstr "Donado"
 
 #: CRM/Grant/Task.php
 msgid "Export Grants"
@@ -215,11 +216,11 @@ msgstr "(moneda original)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr "Estado de la Subvención(es)"
+msgstr "Estado de la donación(es)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr "Tipo de Subvención(es) "
+msgstr "Tipo de donación(es) "
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -314,7 +315,7 @@ msgstr "Esta página muestra todas las subvenciones para %1 desde el inicio."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Haz clic en <a %1>Añadir subvención</a> para grabar una subvención a este contacto."
+msgstr "Haz clic en <a %1>Añadir donación</a> para grabar una donación a este contacto."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
