--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -16,6 +16,7 @@
 # samuelsov <samuel@koumbit.org>, 2013
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012-2013
+# Sasha Matar <matarsasha@outlook.com>, 2016
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012,2016
 # JeanBlais <velorutioneer@gmail.com>, 2014
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:59+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-01 17:56+0000\n"
+"Last-Translator: Sasha Matar <matarsasha@outlook.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6624,15 +6625,15 @@ msgstr "Calendrier"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
-msgstr ""
+msgstr "Symbol spécial inclus"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency symbol (e.g. '$')"
-msgstr ""
+msgstr "symbol monnétaire (par exemple '$')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency ISO code (e.g. 'USD')"
-msgstr ""
+msgstr "Code ISO de la monnaie (par exemple 'USD')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "monetary amount, formatted according to selected Monetary Locale"
