po: update po/es_ES/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 12:48+0000\n"
+"PO-Revision-Date: 2016-09-01 08:17+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -1309,7 +1309,7 @@ msgstr "Opción de obsequio"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Fecha de vencimiento Premium"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php
@@ -1683,7 +1683,7 @@ msgstr "Identificador externo al sistema del contacto"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "%1 para este %2."
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2113,19 +2113,19 @@ msgstr "No puede usar \"Añadir contactos al Grupo\" a menos que el campo de con
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Types"
-msgstr ""
+msgstr "Tipos totales"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Number of Activities"
-msgstr ""
+msgstr "Numero total de Actividades"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration (in Minutes)"
-msgstr ""
+msgstr "Duración total (En minutos)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
-msgstr ""
+msgstr "Listar todas las actividades para esta fila."
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Extra information to control grouping"
