po: update po/fr_CA/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -13,6 +13,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2013
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012-2013
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-01 17:56+0000\n"
-"Last-Translator: Sasha Matar <matarsasha@outlook.com>\n"
+"PO-Revision-Date: 2016-09-02 18:11+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2733,7 +2734,7 @@ msgstr "Une chaîne de caractères ou une expression qui sera remplacée."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid "The option label is displayed to users."
-msgstr "L'étiquette de l'option est affiché aux utilisateurs."
+msgstr "Le libellé de l'option est affiché aux utilisateurs."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid ""
@@ -3272,7 +3273,7 @@ msgstr "<strong>Promesses de dons</strong> - Ce composant permet d'enregistrer l
 msgid ""
 "<strong>CiviMail</strong> - A robust mass-mailing component which allows you"
 " to engage your constituents with personalized email blasts and newsletters."
-msgstr "<strong>Envois massifs</strong> - Composant robuste d'envoi massifs de courriels permettant d'adresser à vos contacts des courriers personnalisés et des info-lettres."
+msgstr "<strong>Envois massifs</strong> - Composant robuste d'envoi massif de courriels permettant d'adresser à vos contacts des courriers personnalisés et des infolettres."
 
 #: templates/CRM/Admin/Form/Setting/Component.hlp
 msgid ""
@@ -3293,7 +3294,7 @@ msgid ""
 "<strong>CiviCampaign</strong> - Lets you link together events, mailings, "
 "activities, and contributions under one \"umbrella\" so that you can track "
 "the progress of all your efforts towards one programmatic goal or campaign."
-msgstr "<strong>CiviCampaign</strong> - Permet de grouper événements, mailings, activités et contributions sous une même « ombrelle » de façon à suivre l'avancement vers votre but programmé ou campagne."
+msgstr "<strong>CiviCampaign</strong> - Permet de grouper événements, publipostages , activités et contributions sous une même « ombrelle » de façon à suivre l'avancement vers votre but programmé ou campagne."
 
 #: templates/CRM/Admin/Form/Setting/Component.hlp
 msgid ""
@@ -3312,7 +3313,7 @@ msgstr "<strong>CiviGrant</strong> - Conçu pour les organisations qui redistrib
 msgid ""
 "CiviCRM includes several optional components which give you more tools to "
 "connect with and engage your constituents."
-msgstr "CiviCRM inclut plusieurs composants optionnels pour vous permettre de mieux communiquer avec vos contacts et soutenir leur motivation et engagement."
+msgstr "CiviCRM inclut plusieurs composants optionnels pour vous permettre de mieux communiquer avec vos contacts et soutenir leurs motivation et engagement."
 
 #: templates/CRM/Admin/Form/Setting/Component.tpl
 msgid ""
@@ -3320,7 +3321,7 @@ msgid ""
 " listed in the left-hand box. Highlight a component and click the Enable or "
 "Disable button to move it from one box to the other. Then click "
 "<strong>Save</strong>."
-msgstr "Les composants activés sont listés dans la boite de droite, ceux désactivés dans celle de gauche. Sélectionnez un composant et cliquez sur Activer ou Désactiver pour transférer le composant d'une boite à l'autre. Puis cliquez <strong>Sauvegarer</strong>."
+msgstr "Les composants activés sont listés dans la boite de droite, ceux désactivés dans celle de gauche. Sélectionnez un composant et cliquez sur Activer ou Désactiver pour transférer le composant d'une boite à l'autre. Puis cliquez <strong>Enregistrer</strong>."
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "Date Display Formats"
