--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -14,6 +14,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # rmps <rmpsante@gmail.com>, 2014
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2013-2016
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-02 18:35+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -858,7 +859,7 @@ msgstr "Campagne"
 
 #: CRM/Activity/DAO/Activity.php xml/templates/civicrm_data.tpl
 msgid "Engagement Index"
-msgstr "Index d'engagement"
+msgstr "Indice d'engagement"
 
 #: CRM/Activity/DAO/Activity.php CRM/Contact/DAO/DashboardContact.php
 #: CRM/Core/DAO/CustomField.php CRM/Core/DAO/CustomGroup.php
@@ -968,7 +969,7 @@ msgstr "choisir"
 
 #: CRM/Activity/Form/Activity.php
 msgid "Please enter the engagement index as a number (integers only)."
-msgstr "Veuillez indiquer l'index d'engagement en chiffres (nombres entiers seulement)."
+msgstr "Veuillez saisir l'indice d'engagement en chiffres (nombres entiers seulement)."
 
 #: CRM/Activity/Form/Activity.php
 msgid "Create a separate activity for each contact."
